2015-05-25  Travis Shirk  <travis@pobox.com>

	* pavement.py, src/eyed3/info.py:
	Here we go 0.7.8
	[41565ec90f7a] [tip]

	* .hgtags:
	Added tag v0.7.7 for changeset a4078a989025
	[e003968dab25] [github/master]

	* ChangeLog:
	prep for release
	[a4078a989025] [v0.7.7]

	* docs/changelog.rst, pavement.py:
	Sigh
	[622be6b01b57]

	* .hgtags:
	Added tag v0.7.6 for changeset b0c9482c422c
	[a4dd0db26497]

	* ChangeLog:
	prep for release
	[b0c9482c422c] [v0.7.6]

	* .hgtags:
	Removed tag v0.7.6
	[646f0a2f51aa]

	* ChangeLog:
	prep for release
	[3fc76923525a]

	* fabfile.py, pavement.py:
	More release fixups, been a while
	[e82e04025d62]

	* .hgtags:
	Added tag v0.7.6 for changeset d3324e7e9138
	[4e1f200d41c8]

	* ChangeLog:
	prep for release
	[d3324e7e9138]

	* src/eyed3/plugins/flair.py:
	Merged devel (0.7.6)
	[68e970bc89e4]

	* fabfile.py, pavement.py:
	Release prep
	[22fa73a4f5e0] <devel>

	* pavement.py:
	fixed
	[dbcd2357c093] <devel>

	* ChangeLog, docs/changelog.rst, src/eyed3/info.py:
	Prep for release.
	[e9674684e3fa] <devel>

	* pavement.py:
	Updated version to alpha
	[69e7c2b1a7de] <py3>

	* docs/installation.rst, pavement.py, paver-minilib.zip,
	src/eyed3/__init__.py, src/eyed3/id3/__init__.py,
	src/eyed3/plugins/art.py, src/eyed3/plugins/fixup.py,
	src/eyed3/plugins/flair.py, src/eyed3/utils/__init__.py:
	merged devel branch
	[72491ef7b63c] <py3>

2015-05-24  Travis Shirk  <travis@pobox.com>

	* src/eyed3/__init__.py:
	merge pull request #8
	[9c8526a40b26] <devel>

	* pavement.py:
	fixed for tarball extension change
	[236b303e7c65] <devel>

2015-05-09  grun  <grunseid@gmail.com>

	* src/eyed3/__init__.py:
	Don't change global warnings filters to avoid unexpected changes to
	the output of code that imports eyeD3.
	[8b4cd7449234]

2015-05-24  Travis Shirk  <travis@pobox.com>

	* docs/changelog.rst:
	Release updates
	[0dcc46d1835a] <devel>

	* fabfile.py:
	Upload to pypi
	[2c78f3d8f5d2] <devel>

	* docs/installation.rst, pavement.py, requirements-26.txt,