@@ -28,14 +28,17 @@ def deploy_sdist(test=False):
     test = bool(test)  # string from cmd line, not-empty is True
     # These repo names are defined in ~/pypirc
     local("paver sdist upload -r {}".format("pypi" if not test else "pypitest"))
-    put("./dist/%s" % SRC_DIST_TGZ, RELEASE_D)
-    put("./dist/%s" % SRC_DIST_ZIP, RELEASE_D)
-    put("./dist/*.md5", RELEASE_D)
+    for pkg in (SRC_DIST_ZIP, SRC_DIST_ZIP):
+        put("./dist/%s" % pkg, RELEASE_D)
+        local("md5sum dist/%s >> dist/%s.md5" % (pkg, pkg))
+        put("./dist/%s.md5" % pkg, RELEASE_D)
 
 
 @task
 def deploy_docs():
     '''Deploy docs tarball and install.'''
+    local("paver docdist")
+    local("md5sum dist/%s >> dist/%s.md5" % (DOC_DIST, DOC_DIST))
     put("./dist/%s" % DOC_DIST, RELEASE_D)
     run("tar xzf %s -C ./www/eyeD3 --strip-components=1" %
             os.path.join(RELEASE_D, DOC_DIST))
