@@ -1,8 +1,16 @@
 2015-05-25  Travis Shirk  <travis@pobox.com>
 
+	* pavement.py:
+	Tox does not like the md5 files
+	[720fa2159dcb] [tip]
+
+	* ChangeLog:
+	prep for release
+	[3ad76a57715b]
+
 	* pavement.py, src/eyed3/info.py:
 	Here we go 0.7.8
-	[41565ec90f7a] [tip]
+	[41565ec90f7a]
 
 	* .hgtags:
 	Added tag v0.7.7 for changeset a4078a989025
